# particle_sim

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  imgui_cmake  makefile  test.config  winbuild.bat
.circleci/: config.yml
src/: Makefile  RK  archive.h  barnes_hutt_objs.h  bh_test.h  example.cpp  global_vars.h  imports.h  init_conditions.h  integrator.cpp  integrator.h  integrators.h  io.h  math_objs.h  misc.h  opengl_temp.cpp  particle_class.h  plummer_collision  plummer_collision.cpp  state_class.h  strided_integrator.h  test.config
src/include/: cxxopts.hpp  glad.c  glad.h  linmath.h
src/include/imgui/: imgui_impl_opengl3.cpp
src/include/imgui/libs/glad/: glad.h
src/res/shaders/: basic.shader
src/scripts/: movie.sh  plot.py  test.py
src/scripts/gc_mpi/: host_node.sh  makefile  mpi_ssh.sh  mpi_test  mpi_test.cpp  slave_nodes.sh  startup.sh
src/tests/: unit_tests.cpp
